# python-monadic-context

./: LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: pytest.yml
context/: context.py  pipe.py
monadic_context/: __init__.py  context.py  defer.py  pipe.py
tests/: test_context.py
